--- a/style.css
+++ b/style.css
@@ -25,7 +25,23 @@ body
     color: #333;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     padding: 26px 20px;
     border-radius: 5px;
+}
+
+.container h1 {
+    font-weight: 500;
+    font-size: 45px;
+}
+
+.container h1 span {
+    color:#019f55;
+    border-bottom: 4px soild #019f55;
+    padding-bottom: 7px;
+}
+
+.display img {
+    width: 30px;
+    cursor: pointer; 
 }
