--- a/style.css
+++ b/style.css
@@ -67,19 +67,22 @@ body
     cursor: pointer;
 }
 
+/*CONTACT SECTION*/
 .btn-group {
   display: flex;
   gap: 10px;
 }
 
-button {
+.link-btn {
   display: flex;
   align-items: center;
   gap: 8px;
   padding: 10px 16px;
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
+  background-color: white;
+  color: #333;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: 600;
 }
 
 .info-btn {
@@ -88,7 +91,18 @@ button {
   right: 20px;
   background-color: #019f55; 
   padding: 16px;
-  border-radius: 8px;
+  border-radius: 5px;
   color: white;
   z-index: 1000; 
+}
+
+.info-btn h1 {
+  font-weight: 520;
+  font-size: 26px;
+  padding-left: 22px;
+  padding-bottom: 12px;
+}
+
+.link-btn img {
+  height: 25px;
 }
