--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body 
 {
-    background: #002339;
+    background: #000;
     color: #fff;
 }
 
@@ -36,8 +36,8 @@ body
 }
 
 .container h1 span {
-    color:#019f55;
-    border-bottom: 4px solid #019f55;
+    color:#FF6026;
+    border-bottom: 4px solid #FF6026;
     padding-bottom: 7px;
 }
 
@@ -55,7 +55,7 @@ body
 .container button {
     border: 0;
     outline: 0;
-    background: #019f55;
+    background: #FF6026;
     color: #fff;
     font-size: 22px;
     font-weight: 300;
